# kapsula

./: .gitignore  README.md  documentation.html  pyproject.toml  swoosh.py
.github/workflows/: publish.yml
