[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kapsula"
version = "0.1.1"
description = "Dead simple docs generator. Originally used at Metabob.com"
authors = [{"name"= "ARJ"}]
dependencies = []
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
kapsula = "kapsula:main"
